<resources>
    <string name="app_name">Metal Ball</string>

    <string name="menu_start_game">START GAME</string>
    <string name="menu_quick_game">QUICK GAME</string>
    <string name="menu_settings_game">SETTINGS</string>
    <string name="menu_exit">EXIT</string>

    <string name="setting_sound">Sound</string>
    <string name="setting_music">Music</string>
    <string name="setting_vibrate">Vibrate</string>
    <string name="setting_ON">ON</string>
    <string name="setting_OFF">OFF</string>
    <string name="setting_Cancel">Cancel</string>
    <string name="setting_Save">Save</string>

    <string name="restart">Restart</string>
    <string name="menu">Menu</string>
    <string name="game_over">GAME OVER</string>




</resources>
