<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/phon" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/start"
            style="@style/MenuFont"
            android:layout_gravity="right"
            android:text="@string/menu_start_game"/>

        <TextView
            android:id="@+id/quick"
            style="@style/MenuFont"
            android:text="@string/menu_quick_game" />

        <TextView
            android:id="@+id/settings"
            style="@style/MenuFont"
            android:text="@string/menu_settings_game" />

        <TextView

            style="@style/MenuFont"
 />

        <TextView
            android:id="@+id/exit"
            style="@style/ExitFont"
            android:text="@string/menu_exit" />
        <TextView

            style="@style/ExitFont"
            />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

</RelativeLayout>