<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/phon" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/sound"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:gravity="center|center"
            android:hapticFeedbackEnabled="true" >

            <TextView
                android:id="@+id/soundTXT"
                style="@style/MenuFont"
                android:layout_height="wrap_content"
                android:text="@string/setting_sound" />

            <TextView
                android:id="@+id/soundOnOff"
                style="@style/ExitFont"
                android:layout_height="wrap_content"
                android:text="@string/setting_ON" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center|center"
            android:hapticFeedbackEnabled="true" >

            <TextView
                android:id="@+id/musicTXT"
                style="@style/MenuFont"
                android:layout_height="wrap_content"
                android:text="@string/setting_music" />

            <TextView
                android:id="@+id/musicOnOff"
                style="@style/ExitFont"
                android:layout_height="wrap_content"
                android:text="@string/setting_ON" />

        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/vibrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center|center"
            android:hapticFeedbackEnabled="true" >

            <TextView
                android:id="@+id/vibrateTXT"
                style="@style/MenuFont"
                android:layout_height="wrap_content"
                android:text="@string/setting_vibrate" />

            <TextView
                android:id="@+id/vibrateOnOff"
                style="@style/ExitFont"
                android:layout_height="wrap_content"
                android:text="@string/setting_ON" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           	android:layout_weight="0.8"
            android:gravity="center|center"
            android:hapticFeedbackEnabled="true" >



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:gravity="center|center" >



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center|center" >

            <Button
                android:id="@+id/Save"
                style="@style/ExitFont"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/setting_Save" />

            <Button
                android:id="@+id/Cancel"
                style="@style/ExitFont"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/setting_Cancel" />

        </LinearLayout>
        
    </LinearLayout>

</RelativeLayout>